Bug 962154 - Use MallocSizeOf to report decoded-video memory. r=cpearce,njn